*eclipse-clp-6.1.194 (16 Feb 2015)

  16 Feb 2015; Michael Weber <xmw@gentoo.org> +eclipse-clp-6.1.194.ebuild,
  +files/eclipse-clp-6.1.194-AR.patch,
  +files/eclipse-clp-6.1.194-Alog-64bit.patch,
  +files/eclipse-clp-6.1.194-Eplex-Makefile.patch,
  +files/eclipse-clp-6.1.194-Eplex-include.patch,
  +files/eclipse-clp-6.1.194-Oci-mkdir.patch,
  +files/eclipse-clp-6.1.194-Pds-64bit.patch,
  +files/eclipse-clp-6.1.194-Shm-buildsystem.patch,
  +files/eclipse-clp-6.1.194-Usc-64bit.patch,
  +files/eclipse-clp-6.1.194-icparc_solvers.patch,
  +files/eclipse-clp-6.1.194-mysql.patch,
  +files/eclipse-clp-6.1.194-tcl8.6.patch,
  +files/eclipse-clp-6.1.194-weclipse.patch, -eclipse-clp-6.1.189.ebuild,
  -files/eclipse-clp-6.1.189-AR.patch,
  -files/eclipse-clp-6.1.189-Alog-64bit.patch,
  -files/eclipse-clp-6.1.189-Eplex-Makefile.patch,
  -files/eclipse-clp-6.1.189-Eplex-include.patch,
  -files/eclipse-clp-6.1.189-Oci-mkdir.patch,
  -files/eclipse-clp-6.1.189-Pds-64bit.patch,
  -files/eclipse-clp-6.1.189-Usc-64bit.patch,
  -files/eclipse-clp-6.1.189-icparc_solvers.patch,
  -files/eclipse-clp-6.1.189-mysql.patch,
  -files/eclipse-clp-6.1.189-tcl8.6.patch,
  -files/eclipse-clp-6.1.189-weclipse.patch:
  provisionary version

*eclipse-clp-6.1.189 (08 Jul 2014)

  08 Jul 2014; Michael Weber <xmw@gentoo.org> +eclipse-clp-6.1.189.ebuild,
  +files/eclipse-clp-6.1.189-AR.patch,
  +files/eclipse-clp-6.1.189-Alog-64bit.patch,
  +files/eclipse-clp-6.1.189-Eplex-Makefile.patch,
  +files/eclipse-clp-6.1.189-Eplex-include.patch,
  +files/eclipse-clp-6.1.189-Oci-mkdir.patch,
  +files/eclipse-clp-6.1.189-Pds-64bit.patch,
  +files/eclipse-clp-6.1.189-Usc-64bit.patch,
  +files/eclipse-clp-6.1.189-icparc_solvers.patch,
  +files/eclipse-clp-6.1.189-mysql.patch,
  +files/eclipse-clp-6.1.189-tcl8.6.patch,
  +files/eclipse-clp-6.1.189-weclipse.patch, -eclipse-clp-6.1.187-r1.ebuild,
  -files/eclipse-clp-6.1.187-AR.patch,
  -files/eclipse-clp-6.1.187-Eplex-Makefile.patch,